--- a/基于医学影像的乳腺癌组织学分级分类研究综述.md
+++ b/基于医学影像的乳腺癌组织学分级分类研究综述.md
@@ -115,4 +115,4 @@
 
 ---
 
-综上所述，通过循序渐进的三个研究方向，从单模态小样本深度学习模型到多模态融合模型再到结合自监督和新架构的高阶模型，我们既综述了当前乳腺癌组织学分级影像研究的方法学要点，也据此提出了创新方案。每一方向均针对当前研究的不足和挑战进行了优化设计，并结合文献证据和实际考虑制定了详细的实现与评估计划。这些方向的开展将有助于推动乳腺癌无创分级诊断技术的发展，为个体化治疗决策提供更可靠的依据。
+综上所述，通过循序渐进的三个研究方向，从单模态小样本深度学习模型到多模态融合模型再到结合自监督和新架构的高阶模型，首先综述了当前乳腺癌组织学分级影像研究的方法学要点，也据此提出了创新方案。每一方向均针对当前研究的不足和挑战进行了简单的设计，并结合文献证据和实际考虑制定了粗略的实现与评估计划。
